# opcua_kincony_a16v3

./: CMakeLists.txt  LICENSE.md  README.md  README_zh.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
TestOPCUAclient/: READ.ME  test_counter8.c
components/esp-eth-drivers/: idf_component.yml
components/esp-eth-drivers/src/: esp_eth_mac_w5500.c  w5500.h
components/esp32-pcf8574/: CMakeLists.txt  pcf8574.c
components/esp32-pcf8574/include/: pcf8574.h
components/ethernet/: CMakeLists.txt  ethernet_connect.c
components/ethernet/include/: ethernet_connect.h
components/io_cache/: CMakeLists.txt  io_cache.c  io_cache.h  io_polling.c
components/model/: CMakeLists.txt  model.c
components/model/include/: model.h
components/network/: CMakeLists.txt  ethernet_connect.c  network_manager.c  wifi_connect.c
components/network/include/: network_manager.h  wifi_connect.h
components/network_manager/: CMakeLists.txt  network_manager.c
components/network_manager/include/: network_manager.h
components/open62541lib/: CMakeLists.txt  Kconfig.projbuild  open62541.c
components/open62541lib/opcua_access_control/: ua_accesscontrol_custom.c
components/open62541lib/opcua_access_control/include/: ua_accesscontrol_custom.h
components/wifi/: CMakeLists.txt  wifi_connect.c
components/wifi/include/: wifi_connect.h
main/: CMakeLists.txt  config.c  config.h  config.lan.c  config.wf.c  opcua_esp32.c  opcua_esp32.h
